--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "rustmatrix"
-version = "0.1.0"
-authors = ["meagnehouser <sleepy.st818@gmail.com>"]
-edition = "2018"
+name = "termatrix"
+version = "0.2.0"
+authors = ["Joel Edwards <joeledwards@gmail.com>"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cursive = "0.17"
-rand = "0.8.4"
+clap = "3.1.14"
+cursive = "0.18.0"
+rand = "0.8.5"
 termion = "1.5.6"
