feat: add another keyword

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "The Matrix scrolling in your terminal"
 version = "0.2.0"
 authors = ["Joel Edwards <joeledwards@gmail.com>"]
 edition = "2021"
-keywords = ["matrix", "terminal"]
+keywords = ["cli", "matrix", "terminal"]
 categories = ["command-line-utilities"]
 repository = "https://github.com/joeledwards/termatrix/"
 readme = "README.md"
