--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ license = "ISC"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.1.14"
+clap = { version = "3.1.14", features = ["derive", "env"] }
 cursive = "0.18.0"
 rand = "0.8.5"
 termion = "1.5.6"
