--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "termatrix"
 description = "The Matrix scrolling in your terminal"
-version = "2.0.1"
+version = "2.1.0"
 authors = ["Joel Edwards <joeledwards@gmail.com>"]
 edition = "2021"
-keywords = ["cli", "matrix", "terminal"]
+keywords = ["cli", "falling", "matrix", "neo", "scroll", "scrolling", "terminal"]
 categories = ["command-line-utilities"]
 repository = "https://github.com/joeledwards/termatrix/"
 readme = "README.md"
