fix: crates.io keyword limit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "The Matrix scrolling in your terminal"
 version = "2.1.0"
 authors = ["Joel Edwards <joeledwards@gmail.com>"]
 edition = "2021"
-keywords = ["cli", "falling", "matrix", "neo", "scroll", "scrolling", "terminal"]
+keywords = ["cli", "falling", "matrix", "scrolling", "terminal"]
 categories = ["command-line-utilities"]
 repository = "https://github.com/joeledwards/termatrix/"
 readme = "README.md"
